--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ button {
   font-size: 15px;
   border: none;
   border-radius: 15px;
-  cursor: pointer;
+  cursor: none;
   box-sizing: border-box;
 }
 
